force-app/main/default/objects/CIBE_Link__mdt/CIBE_Link__mdt.object-meta.xml
<CustomObject>
    <description>Tabla que almacena los datos de los links que se visualizan en el componente.</description>
    <label>CIBE Link</label>
    <pluralLabel>CIBE Links</pluralLabel>
</CustomObject>