force-app/main/default/objects/CIBE_Link__mdt/fields/CIBE_Active__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>