force-app/main/default/objects/CIBE_Link__mdt/fields/CIBE_Parameters__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Parameters__c</fullName>
    <label>CIBE Parameters</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>