force-app/main/default/objects/CIBE_Link__mdt/fields/CIBE_Title__c.field-meta.xml
<CustomField>
    <fullName>CIBE_Title__c</fullName>
    <label>CIBE Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>