force-app/main/default/objects/CIBE_Link__mdt/fields/CIBE_URL__c.field-meta.xml
<CustomField>
    <fullName>CIBE_URL__c</fullName>
    <label>CIBE URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>