force-app/main/default/objects/CIBE_Link__mdt/fields/CIBE_URL_Long__c.field-meta.xml
<CustomField>
    <fullName>CIBE_URL_Long__c</fullName>
    <label>CIBE_URL_Long</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>